k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: collectif-objets
    app.kubernetes.io/instance: collectif-objets-dev1
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: collectif-objets
      app.kubernetes.io/instance: collectif-objets-dev1
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: collectif-objets
        app.kubernetes.io/instance: collectif-objets-dev1
        app.kubernetes.io/component: worker
    spec:
      containers:
        - args: ["bundle", "exec", "good_job", "start"]
          image: collectif-objets-ror
          name: worker
      restartPolicy: Always
