k8s/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  ports:
    - name: "8025"
      port: 8025
      targetPort: 8025
  type: LoadBalancer
  selector:
    io.kompose.service: mailhog
