k8s/co-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collectif-objets
  labels:
    app.kubernetes.io/name: collectif-objets
    app.kubernetes.io/instance: collectif-objets-dev1
    app.kubernetes.io/component: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: collectif-objets.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 3000
